<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="Robot_Get_Int" Id="{6bfb4b45-243d-498b-8845-34f1397e8715}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION Robot_Get_Int : BOOL
VAR_INPUT
	Num : UINT;
END_VAR
VAR_IN_OUT
	Robot : UR3e_Robot;
	Value : DINT;
END_VAR
VAR
	Row : UINT;
	INTArray : INT_ByteArray;
	i : UINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF Num <= 23 THEN
	Row := Num * 4;
	FOR i:=0 TO 3 BY 1 DO
		INTArray.AValue[3-i] := Robot.GPR_INT[Row+i];
	END_FOR
	
	Value := INTArray.Value;
	Robot_Get_Int := TRUE;
ELSE
	Robot_Get_Int := FALSE;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="Robot_Get_Int">
      <LineId Id="25" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="32" Count="7" />
      <LineId Id="27" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>